GNOME Bugzilla – Bug 728970
rtsp-client: add signal before sending response
Last modified: 2014-05-01 05:22:24 UTC
Currently, client has a signal for each of the request. The signals are emitted after the request has been performed (except TEARDOWN). However, it would be great that we could modify the RTSP messages before being send to the client.
Created attachment 275163 [details] [review] new send-response signal this patch adds a new "send-response" signal which gets emitted before an RTSP message is to be sent to the client. this allows latest modifications to the message.
Created attachment 275165 [details] [review] new send-message signal just renamed "send-response" to "send-message". i think it makes more sense.
I reworked it a bit. There is no need to send the message type, it's already inside the message itself. I also passed the context. commit ea4543efc810f9347196ece13e8c2168b82073eb Author: Wim Taymans <wtaymans@redhat.com> Date: Thu May 1 06:17:06 2014 +0200 client: emit a signal before sending a message Fixes https://bugzilla.gnome.org/show_bug.cgi?id=728970
Cool. Yes, much easier. Thank you!