client: emit a signal before sending a message

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=728970